Work on UI - fixed bug where multiple chemicals could be selected - Added CONDITION and CHEMICAL titles - trying to make inputs aligned nicely - not completed yet

--- a/static/screens_style.css
+++ b/static/screens_style.css
@@ -1,16 +1,3 @@
-table, th, td {
-  border: 1px solid black;
-  margin: auto;
-}
-
-.inline-tables {
-  display: inline-table;
-}
-
-.tablebox {
-  display: inline-table;
-}
-
 body {
   text-align: center;
 }
@@ -19,6 +6,10 @@ button {
   cursor: pointer;
 }
 
+#screen-table, #screen-table > tr > th, #screen-table > tr > td {
+  border: 1px solid black;
+  margin: auto;
+}
 
 #query-container {
   margin: auto;
@@ -48,9 +39,9 @@ button {
   font-size: medium;
   padding: 5px;
 }
-
-
-
+.and-title, .or-title {
+  margin-bottom: 3px;
+}
 .and-title {
   background-color: rgb(188, 255, 194);
 }
@@ -62,9 +53,6 @@ button {
 }
 
 
-
-
-
 .logic-div {
   display: inline-block;
   border: 2px solid rgb(255, 206, 99);
@@ -73,9 +61,9 @@ button {
   margin-left: 3px;
   margin-right: 3px;
   margin-bottom: 3px;
-  vertical-align: top;
+  vertical-align: middle;
+  background-color: rgb(255, 255, 255);
 }
-
 .condition-div, .chemical-div {
   display: inline-block;
   border: 2px solid rgb(127, 48, 255);
@@ -84,19 +72,23 @@ button {
   padding: 3px;
   cursor: pointer;
 }
-
-.chemical-div {
-  background-color: rgb(255, 255, 255);
-}
-
 .selected-condition {
   background-color: rgb(250, 255, 178);
 }
-
 .selected-chemical {
   background-color: rgb(213, 255, 178);
 }
 
-.details {
+.input-table {
   text-align: left;
+  table-layout: fixed;
+  border: 0;
+  margin: auto;
+}
+.input-table > tr > td {
+  border: 0;
+  width: 50%;
+}
+.input-wide {
+  width: 100%;
 }
